# Kronuz.github.io

./: 404.html  AGENTS.md  CNAME  _config.yml  about.md  astro.config.mjs  package-lock.json  package.json  readme.md  tsconfig.json
_data/: docs.yml  projects.yml  tutorials.yml
_docs/: django_gitlist.md  django_polymorphic.md  index.md  mech.md  pyscss.md  sublimecodeintel.md  sublimelinter.md  xapiand.md
_includes/: footer.html  header.html  mobile-nav-items.html  nav.html  nav_mobile.html  news_contents.html
_layouts/: blog_item.html  docs.html  error.html  projects.html  tutorials.html
_posts/: 2015-04-16-using-sublimecodeintel-v3-0.md  2015-04-16-using-sublimecodeintel-v30.md  2015-04-23-animated-licecap-gifs-the-hard-way.md  2015-04-23-animated-licecap.md  2015-04-23-first-post.md  2016-03-08-nasty-bugs-crawling-in-some-python-libraries.md  2016-03-08-nasty-bugs.md  2018-03-24-welcome-to-jekyll.markdown  2018-03-24-welcome-to-jekyll.md
_projects/: django_gitlist.md  django_polymorphic.md  index.md  mech.md  pyscss.md  sublimecodeintel.md  sublimelinter.md  xapiand.md
_sass/: _style.scss
discussions/backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.sh  smoke_test.py
discussions/backend/discussions/: admin.py  app.py  auth.py  comments.py  config.py  db.py  gh.py  md.py  ratelimit.py  reactions.py  runtime.py  sessions.py  tenants.py
discussions/backend/discussions/db/: __init__.py  base.py  sqlite.py
discussions/backend/discussions/store/: __init__.py  base.py  github.py  selfhosted.py  sqlite.py
src/: consts.ts  (+2 more)
(+183 files in other folders)
